--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Munster</title>
+    <link rel="shortcut icon" href="#" />
 </head>
 <body>
     <app-root></app-root>
-    <script src="./src/main.js"></script>
+    <script src="/dist/main.js"></script>
 </body>
 </html>
