--- a/src/modules/card/Card.html
+++ b/src/modules/card/Card.html
@@ -1,11 +1,21 @@
 <template>
     <div class="card">
-        <h3 class="card-header"><slot name="header"></slot></h3>
+        <h3 class="card-header">
+            <slot name="card-header"></slot>
+        </h3>
         <div class="card-body">
-            <slot name="body"></slot>
+            <slot name="card-body"></slot>
         </div>
         <div class="card-actions">
-            <slot name="footer"></slot>
+            <slot name="card-footer"></slot>
+            <div class="card-actions-cols">
+                <div class="card-actions-cols-left">
+                    <slot name="card-actions-left"></slot>
+                </div>
+                <div class="card-actions-cols-right">
+                    <slot name="card-actions-right"></slot>
+                </div>
+            </div>
         </div>
     </div>
 </template>
@@ -28,7 +38,7 @@
     .card-header {
         font-size: 16px;
         letter-spacing: 0px;
-        color: #262626;
+        color: #333;
         font-weight: 600;
         margin: 0 0 20px 0;
     }
@@ -38,5 +48,10 @@
     }
     .card-actions {
         margin: 20px 0 0 0;
+    }
+    .card-actions-cols {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 </style>
