--- a/src/modules/card/Card.html
+++ b/src/modules/card/Card.html
@@ -1,8 +1,14 @@
 <template>
-    <div class="card">
+    <div v:ref={this.$el} class="card">
         <h3 class="card-header">
             <slot name="card-header"></slot>
         </h3>
+        <div class="card-header-actions">
+            <slot name="card-header-actions"></slot>
+        </div>
+        <div class="card-image">
+            <slot name="card-image"></slot>
+        </div>
         <div class="card-body">
             <slot name="card-body"></slot>
         </div>
@@ -10,10 +16,10 @@
             <slot name="card-footer"></slot>
             <div class="card-actions-cols">
                 <div class="card-actions-cols-left">
-                    <slot name="card-actions-left"></slot>
+                    <slot name="card-footer-left"></slot>
                 </div>
                 <div class="card-actions-cols-right">
-                    <slot name="card-actions-right"></slot>
+                    <slot name="card-footer-right"></slot>
                 </div>
             </div>
         </div>
@@ -22,36 +28,64 @@
 
 <script>
     export default class Card {
+        $el;
         $shadowMode = 'open';
+
+        static get observedAttributes() {
+          return ['class', 'style'];
+        }
+
+        $attributeChanged(attrName, oldVal, newVal) {
+            if (attrName === 'class') {
+                newVal.split(' ').forEach(cls => {
+                    this.$el.classList.add(cls);
+                });
+            } else {
+                this.$el.setAttribute(attrName, newVal);
+            }
+        }
     }
 </script>
 
 <style>
-    .card {
-        border-radius: 3px;
-        box-shadow: 1px 1.732px 3px rgba(0, 0, 0, 0.09);
-        background-color: #ffffff;
-        padding: 15px;
-        font-family: Roboto;
-        font-size: 14px;
-    }
-    .card-header {
-        font-size: 16px;
-        letter-spacing: 0px;
-        color: #333;
-        font-weight: 600;
-        margin: 0 0 20px 0;
-    }
-    .card-body ::slotted(p) {
-        margin-top: 0;
-        margin-bottom: 10px;
-    }
-    .card-actions {
-        margin: 20px 0 0 0;
-    }
-    .card-actions-cols {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+.card {
+    border-radius: 3px;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+    background-color: #ffffff;
+    padding: 15px;
+    font-family: Roboto;
+    font-size: 14px;
+    position: relative;
+}
+.card-header-actions {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+.card-header {
+    font-size: 16px;
+    letter-spacing: 0px;
+    color: #333;
+    font-weight: 600;
+    margin: 0 0 20px 0;
+}
+.card-body ::slotted(p) {
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+.card-actions {
+    margin: 20px 0 0 0;
+}
+.card-actions-cols {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px 0 0 0;
+}
+.card-image {
+    margin: 0 -15px 15px -15px;
+}
+.card-image ::slotted(img) {
+    max-width: 100%;
+}
 </style>
