--- a/src/Root.html
+++ b/src/Root.html
@@ -1,3 +1,34 @@
 <template>
-  <plug-router-outlet />
+  <div class="root-page">
+    <nav class="navbar"></nav>
+    <div class="root-body">
+      <div class="sidebar">
+
+      </div>
+      <div class="main-content">
+        <plug-router-outlet />
+      </div>
+    </div>
+  </div>
 </template>
+
+<style>
+  .root-page {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+  .navbar {
+    height: 50px;
+  }
+  .root-body {
+    flex: 1;
+    display: flex;
+  }
+  .sidebar {
+    width: 200px;
+  }
+  .main-content {
+    flex: 1;
+  }
+</style>
