--- a/src/Root.html
+++ b/src/Root.html
@@ -1,38 +1,3 @@
 <template>
-  <div class="root-page">
-    <nav class="navbar">
-    </nav>
-    <div class="root-body">
-      <div class="sidebar">
-        <app-sidebar></app-sidebar>
-      </div>
-      <div class="main-content">
-        <plug-router-outlet />
-      </div>
-    </div>
-  </div>
+  <h1>Hello World</h1>
 </template>
-
-<style>
-  .root-page {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-  }
-  .navbar {
-    height: 50px;
-    border-bottom: 1px solid #eceeef;
-    font-size: 14px;
-  }
-  .root-body {
-    flex: 1;
-    overflow: auto;
-    display: flex;
-  }
-  .sidebar {
-    width: 200px;
-  }
-  .main-content {
-    flex: 1;
-  }
-</style>
