--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-    <app-root></app-root>
+    <app-root-component></app-root-component>
         
-    <script src="/dist/main.js"></script>
+    <script src="/dist/index.js"></script>
 </body>
 </html>
